compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_equality1.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go(y) {\n  let x = 1.0\n  x == y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(y) {
  let x = 1.0
  x == y
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(y gleam_P.Float_t) gleam_P.Bool_t {
  var x gleam_P.Float_t = 1.0
  _ = x
  return gleam_P.Bool_t(x.Equal(y))
}
