compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_literals.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n    1.5\n    2.0\n    -0.1\n    1.\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    1.5
    2.0
    -0.1
    1.
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Float_t {
  _ = 1.5
  _ = 2.0
  _ = -0.1
  return 1.
}
