compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_operators.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n    1.0 +. 1.4 // => 2.4\n    5.0 -. 1.5 // => 3.5\n    5.0 /. 2.0 // => 2.5\n    3.0 *. 3.1 // => 9.3\n\n    2.0 >. 1.0  // => True\n    2.0 <. 1.0  // => False\n    2.0 >=. 1.0 // => True\n    2.0 <=. 1.0 // => False\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    1.0 +. 1.4 // => 2.4
    5.0 -. 1.5 // => 3.5
    5.0 /. 2.0 // => 2.5
    3.0 *. 3.1 // => 9.3

    2.0 >. 1.0  // => True
    2.0 <. 1.0  // => False
    2.0 >=. 1.0 // => True
    2.0 <=. 1.0 // => False
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Bool_t {
  _ = 1.0 + 1.4
  _ = 5.0 - 1.5
  _ = gleam_P.DivideFloat(5.0, 2.0)
  _ = 3.0 * 3.1
  _ = 2.0 > 1.0
  _ = 2.0 < 1.0
  _ = 2.0 >= 1.0
  return 2.0 <= 1.0
}
