compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__float_scientific_literals.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n    0.01e-1\n    0.01e-0\n    -10.01e-1\n    -10.01e-0\n    1.7_976_931_348_623_157e308\n    -1.7_976_931_348_623_157e308\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    0.01e-1
    0.01e-0
    -10.01e-1
    -10.01e-0
    1.7_976_931_348_623_157e308
    -1.7_976_931_348_623_157e308
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Float_t {
  _ = 0.01e-1
  _ = 0.01e-0
  _ = -10.01e-1
  _ = -10.01e-0
  _ = 1.7_976_931_348_623_157e308
  return -1.7_976_931_348_623_157e308
}
