compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__int_mod_complex_expr.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n  case 1 >= 0 {\n    True -> 2\n    False -> 4\n  } % 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  case 1 >= 0 {
    True -> 2
    False -> 4
  } % 2
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Int_t {
  return gleam_P.RemainderInt(
    (func() gleam_P.Int_t {
      var _a gleam_P.Bool_t = 1 >= 0
      _ = _a
      if _a {
        return 2
      } else {
        return 4
      }
    })(),
    2,
  )
}
