compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__operator_precedence.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nfn go() {\n  2.4 *. { 3.5 +. 6.0 }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  2.4 *. { 3.5 +. 6.0 }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Float_t {
  return 2.4 * (3.5 + 6.0)
}
